CHANGELOG

When		Who		What
======================================================================================
2017-10-13	Richard Forth   Closes #223 Added an easter egg.
				To trigger it, set maxclients /
				maxrequestworkers to 5 or less.
2017-10-13	Richard Forth   Closes #222 pidfile not found when ecased in quotes.
2017-10-13	Richard Forth   Added some much needed carriage returns to VERBOSE lines.
2017-07-14	Richard Forth   Resolved #215, pidfile issue.
2017-07-08	Richard Forth   Resolved #195, virtualmin/webmin pidfile issue.
2017-07-08	Richard Forth   Resolved #211, detect virtualmin/webmin install.
				Note: only displays webmin version in virtualmin
				installs. 
2017-07-08	Richard Forth   Resolved #209, Yet more ubuntu madness...
				No /etc/php/7.0/apache2 folder, this is
				/etc/php/7.0/fpm. Added logic to include this.
2017-07-08	Richard Forth   Resolved #207, Hard Fail in OS is not listed
				as supported.
2017-07-08	Richard Forth   Resolved #206, Drop support for debian 7
				Issues with perl modules out of the box.
2017-07-08	Richard Forth   Resolved #205 at least on Debian 9
				debian update check broken, requires python
				Addded a new preflight check to check for a
				python binary.
				Also adjusted the way to check what OS we are
				running as debian 9 now reports its distro in
				all lowercase.
2017-07-08	Richard Forth   Resolved #197 at least on Debian 9
				debian php.ini using cli not apache
				committed to staging for further testing
2017-07-08	Richard Forth   Closes #204, Debian 9 pidfile not found error.
2017-07-07	Richard Forth   Closes #201, a serious bug that invoked OOMKILLER when
				scanning very large log files.
2017-06-13	Richard Forth   Fixed uptime logic problem.
2017-06-13	Richard Forth   Added more verbosity.
2017-04-27	Richard Forth   Added more verbosity, fixed some typos.
2017-04-20	Richard Forth   Closes #184 , Modified PHP Fatal Error Check.
				- Now works on subfolders correctly